Updated word list

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 </div>
 
 <script>
-  let words = ['CLASH', 'DRINK', 'THIEF', 'DUNCE', 'CROWD', 'VAULT', 'KNIFE', 'TRUCK', 'GLOVE', 'BUNCH', 'WIDTH', 'FANCY', 'MONTH', 'GLINT', 'MERCY', 'WALTZ', 'HONEY', 'WOMAN', 'SCOUT', 'FIGHT'];
+  // let words = ['CLASH', 'DRINK', 'THIEF', 'DUNCE', 'CROWD', 'VAULT', 'KNIFE', 'TRUCK', 'GLOVE', 'BUNCH', 'WIDTH', 'FANCY', 'MONTH', 'GLINT', 'MERCY', 'WALTZ', 'HONEY', 'WOMAN', 'SCOUT', 'FIGHT'];
+  let words = ['HOVEL', 'PLANK', 'PLUCK', 'UNITY', 'TOKEN'];
   words = shuffle(words);
 
   let trial = 0;
