Udpated descriptions for the warmup task

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
 <div id="container">
   <div id="start-screen">
-    <h2>Word Puzzle Task</h2>
-    <p>You will see scrambled letters. Click them in the correct order to form a word.</p>
-    <button id="start-button">Start Task</button>
+    <h2>Word Puzzle Task Warmup</h2>
+    <p>This is a warmup. You will five scrambled letters of five words. Click them in the correct order to form a word.</p>
+    <button id="start-button">Start Warmup Task</button>
   </div>
 
   <div id="task-interface" style="display: none;">
