Updated logging descriptor for the warmup task

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     timerDisplay.innerHTML = "";
 
     window.parent.postMessage({
-      type: "word_puzzle_data",
+      type: "word_puzzle_warmup_data",
       payload: results
     }, "*");
   }
